<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BlitzIt</string>
    <string name="version_number">Version: 1.0.3</string>
    <string name="sharedPreferences">blitzit.app.sharedPreference</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="username_email">Username / Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="plan_budget">Plan Budget</string>
    <string name="plan_balance">Plan Balance</string>
    <string name="progress">Progress</string>
    <string name="remaining">Remaining</string>
    <string name="view_budget">View Budget</string>
    <string name="core_description">Assistance with daily life, consumables, social and community participation</string>
    <string name="core">CORE</string>
    <string name="capacity_building">CAPACITY BUILDING</string>
    <string name="improved_living">Improved daily living skills</string>
    <string name="support_coordination">Support Coordination</string>
    <string name="your_plan_overview">Your Plan Overview</string>
    <string name="plan">PLAN</string>
    <string name="active">ACTIVE</string>
    <string name="view_statements">View Statements</string>
    <string name="my_profile">My Profile</string>
    <string name="my_plans">My Plans</string>
    <string name="invoices">Invoices</string>
    <string name="track_spending">Track Spending</string>
    <string name="my_providers">My Providers</string>
    <string name="contact_us">Contact Us</string>
    <string name="www_blitzit_com_au">www.blitzit.com.au</string>
    <string name="website">Website</string>
    <string name="hello_blitzit_com_au">hello@blitzit.com.au</string>
    <string name="_1300_966_119" tools:ignore="TypographyDashes">1300–966-119</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="windsor_nsw_2756">Windsor NSW 2756</string>
    <string name="po_box_4323">PO Box 4323</string>
    <string name="_319_george_street">319 George Street</string>
    <string name="postal_address">Postal Address</string>
    <string name="pitt_town_nsw_2756">Pitt Town NSW 2756</string>
    <string name="book_a_consultation">Book A Consultation</string>
    <string name="visit_us">Visit Us</string>
    <string name="setting_info">Settings &amp; Information</string>
    <string name="edit_profile">Edit profile</string>
    <string name="about_this_app">About this app</string>
    <string name="faqs">FAQs</string>
    <string name="who_can_see_my_plan">Who can see my plan?</string>
    <string name="faq_1">Blitzit Plan Manager typically processes and pays invoices within three to five business days of receiving the invoice. While we endeavour to turn around your invoices within this time period, payments may sometimes be delayed due to circumstances out of our control. Please see <a href="https://www.blitzit.com.au/getting-paid">Getting Paid</a> for more information.</string>
    <string name="faq_1_header">When will I be Paid?</string>
    <string name="faq_2_header">How do I send you an Invoice?</string>
    <string name="faq_2_part1">Simple send it to us via email: invoices@blitzit.com.au \n\nOr, put the invoice in the post and send to:</string>
    <string name="faq_2_part2">Blitzit Plan Manager \nPO Box 4323 \nPitt Town, NSW, 2756</string>
    <string name="faq_2_part3">(Note: please allow additional time if you choose to post your invoice as postage times are dependent on Australia Post. We will do our utmost to pay posted invoices promptly.)</string>
    <string name="keyword_search">Keyword Search</string>
    <string name="faq_desc_1">Whether you\'re a participant or service provider, we understand that you\'ll have a lot of questions about plan management.</string>
    <string name="faq_desc_2">Here are some of the common questions we get asked.</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="booking_text_p1">"To book a meeting with one of our consultants, please complete the form below. We'll be in touch within two business days to set up a time for discussion."</string>
    <string name="booking_text_p2">We understand that as an NDIS participant, you or your carer may have questions on the best way to manage your plan. We offer both in-person and phone-based consultation with a friendly and knowledgeable Blitzit Plan Manager staff member to help you make the right choice and decisions about your NDIS plan.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="ndis_number">NDIS Number</string>
    <string name="contact_number">Contact Number</string>
    <string name="participant_email">Participant Email</string>
    <string name="statements_email">Statements Email</string>
    <string name="primary_contact_email">Primary Contact Email</string>
    <string name="address">Address</string>
    <string name="support_coordinator_email">Support Coordinator Email</string>
    <string name="edit_profile_text1">Your profile is based on information supplied to Blitzit Plan Manager when submitting your service agreement for your current plan.</string>
    <string name="edit_profile_text2">Changes made through this Edit Request form are sent to Blitzit Plan Manager, and will be reflected on your active plan.</string>
    <string name="edit_profile_text3">Changes made using the Edit Request form may take up to 48 hours before they are shown in your profile details.</string>
    <string name="edit_profile_text4">Before submitting an Edit Request please confirm the details you are submitting are correct and accurate.</string>
    <string name="edit_profile_text5">Blitzit Plan Manager may contact you to review the information supplied, before the changes take affect.</string>
    <string name="submit_edit_request">Submit Edit Request</string>
    <string name="notes">Notes</string>
    <string name="starting_balance">Starting Balance</string>
    <string name="current_balance">Current Balance</string>
    <string name="overview">Overview</string>
    <string name="view_category_tracking">View Category Tracking</string>
    <string name="category_budget">Category Budget</string>
    <string name="allocated_funds">Allocated Funds</string>
    <string name="remaining_funds">Remaining Funds</string>
    <string name="unallocated_funds">Unallocated Funds</string>
    <string name="invoice_select_text">Select invoice below to view invoice details.</string>
    <string name="invoice_reference">Invoice Reference</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_up_help">For help creating your New Account, please contact Blitzit Plan Manager and speak to one of our friendly team members.</string>
    <string name="question_mark">\?</string>
    <string name="sign_up_type_1">I am an NDIS Participant</string>
    <string name="sign_up_type_2">I am a Parent/Guardian/Authorised Representative of a Participant</string>
    <string name="sign_up_type_3">I am a Support Coordinator</string>
    <string name="sign_up_type_header">How will you be using the Blitzit App?</string>
    <string name="sign_up_participant_complete">Please complete the following:</string>
    <string name="submit">Submit</string>
    <string name="abn">ABN</string>
    <string name="email_address">Email Address</string>
    <string name="invoice_details_tooltip">Select individual invoice below to view details.</string>
    <string name="filter">Filter</string>
    <string name="providers">Providers</string>
    <string name="provider">Provider</string>
    <string name="contact_email">Contact Email:</string>
    <string name="contact_person">Contact Person:</string>
    <string name="contact_number_extra">Contact Number:</string>
    <string name="track_your_spending">Track your spending</string>
    <string name="choose_category_to_view">Choose Category to view</string>
    <string name="your_current_spend_is">Your current spend is:</string>
    <string name="current_average_spend">Current Average Spend:</string>
    <string name="weekly_spend">Weekly spend:</string>
    <string name="plan_end_date">Plan end date:</string>
    <string name="estimated_consumption_date">Estimated consumption date:</string>
    <string name="total_claimed_for_category">Total claimed for Category</string>
    <string name="create_new_account">Create New Account</string>
    <string name="success">Success!</string>
    <string name="new_account_message_part_1">Your information has been submitted to Blitzit to create a New Account.</string>
    <string name="new_account_message_part_2">You should receive an email in 15 minutes with a verification code, and confirming the account details entered.</string>
    <string name="new_account_message_part_3">If you do not receive this email in 15 minutes, please contact Blitzit Plan Manager.</string>
    <string name="confirm_account">Confirm Account</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Confirm Password</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_confirmation_code">Enter Confirmation Code</string>
    <string name="paid_to">Paid to:</string>
    <string name="invoice_number">Invoice Number:</string>
    <string name="claimed_total">Claimed Total:</string>
    <string name="payment_details">PAYMENT DETAILS</string>
    <string name="invoice">Invoice</string>
    <string name="line_item">Line Item:</string>
    <string name="claimed_price_per_unit_hour">Claimed Price per unit/hour:</string>
    <string name="claimed_quantity_hour">Claimed quantity/hour:</string>
    <string name="service_dates">Service Dates:</string>
    <string name="you_have_been_sent_a_confirmation_code_to_the_email_provided">You have been sent a confirmation code to the email provided</string>
    <string name="please_enter_the_code_and_set_your_new_password">Please enter the code and set your new password</string>
    <string name="on_track">On Track</string>
    <string name="over_spending">Over Spending</string>
    <string name="faq_body_3_3">These supports and services must meet certain criteria based on section 32 of the <a href="https://www.legislation.gov.au/Details/C2013A00020">National Disability Insurance Scheme Act 2013 (NDIS Act).</a></string>
    <string name="faq_header_3">What is \'Reasonable and Necessary\'?</string>
    <string name="faq_body_3_1">The NDIS provides funding to participants for support and services aimed at increasing their independence, inclusion, and social and economic participation.</string>
    <string name="faq_body_3_2">Reasonable and necessary is a term used to determine what kind of funded support you might need. Simply put - reasonable is something that is considered fair, and necessary is something that you need because of your disability. This can be very confusing as everyone interprets differently.</string>
    <string name="faq_header_4">What Types of Plan Reviews are available?</string>
    <string name="edit_profile_request">Edit Profile Request</string>
    <string name="x">X</string>
    <string name="edit_profile_success_message">You have requested to change your profile details.\n\nA Blitzit team member will review this request and be in touch soon.</string>
</resources>