<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.registration.SignUpHelpFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_colour_gradient">

    <TextView
        android:id="@+id/sign_up_heading"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/avenir"
        android:gravity="center"
        android:text="Need Help?"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_up_back_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="?selectableItemBackground"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/back_btn"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_back_button"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_back_button"
        app:layout_constraintStart_toStartOf="@+id/sign_up_back_button"
        app:layout_constraintTop_toTopOf="@+id/sign_up_back_button"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sign_up_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_heading" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="192dp"
                android:src="@drawable/rev_primary_logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/sign_up_help"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/phone"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/_1300_966_119"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/hello_blitzit_com_au"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/website"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/www_blitzit_com_au"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/visit_us"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/_319_george_street"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/windsor_nsw_2756"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/postal_address"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/po_box_4323"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/pitt_town_nsw_2756"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>