<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.settings.ContactFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <Button
            android:id="@+id/contact_back_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="?selectableItemBackground"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:tint="@color/darker_grey"
            android:src="@drawable/back_btn"
            app:layout_constraintTop_toTopOf="@+id/contact_back_button"
            app:layout_constraintEnd_toEndOf="@+id/contact_back_button"
            app:layout_constraintStart_toStartOf="@+id/contact_back_button"
            app:layout_constraintBottom_toBottomOf="@+id/contact_back_button"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/dashboard_colour_gradient"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/phone"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/_1300_966_119"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorLink="@color/blitz_it_orange"
                android:textSize="24sp"
                android:autoLink="phone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/hello_blitzit_com_au"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorLink="@color/blitz_it_orange"
                android:textSize="24sp"
                android:autoLink="email"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/website"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/contact_us_web_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/www_blitzit_com_au"
                android:textColorLink="@color/blitz_it_orange"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:autoLink="web"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/visit_us"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/_319_george_street"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/windsor_nsw_2756"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/postal_address"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/po_box_4323"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/pitt_town_nsw_2756"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <Button
                android:id="@+id/contact_book"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="48dp"
                android:layout_marginBottom="92dp"
                android:background="@drawable/round_button"
                android:fontFamily="@font/avenir"
                android:text="@string/book_a_consultation"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@color/blitz_it_light_blue"
                app:cornerRadius="92dp"
                android:visibility="gone"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>