<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.ProfileEditSuccessFragment"
    android:background="@drawable/dashboard_colour_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile_edit_topBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/avenir"
        android:gravity="center"
        android:text="@string/edit_profile_request"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile_edit_back_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:background="?selectableItemBackground"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/x"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_edit_back_button"
        app:layout_constraintEnd_toEndOf="@+id/profile_edit_back_button"
        app:layout_constraintStart_toStartOf="@+id/profile_edit_back_button"
        app:layout_constraintTop_toTopOf="@+id/profile_edit_back_button" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profile_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_topBar" />

    <LinearLayout
        android:id="@+id/profile_edit_description_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_divider">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/avenir"
            android:text="@string/success"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/avenir"
            android:gravity="center"
            android:text="@string/edit_profile_success_message"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>